--- a/theme/snapr/css/main.less
+++ b/theme/snapr/css/main.less
@@ -758,7 +758,32 @@ textarea.ui-input-text {
 // @IMAGES
 // -------------------------
 
+// Fullscreen grid for larger phones like the s3
 
+@media only screen and (min-device-width : 719px) and (max-device-width : 721px) and (-webkit-min-device-pixel-ratio : 2) and (orientation : portrait) {
+    .s-thumbs-grid-med,
+    .x-grid .x-feed-images{
+        .s-thumb-image,
+        .s-load-more-inline{
+            width: @thumbSize + 14px!important;
+            height: @thumbSize + 14px!important;
+        }
+    }
+    .s-thumbs-grid-med{
+        padding: @padding 0 @padding / 2 @padding / 2 + 2px;
+    }
+    .x-grid .x-feed-images{
+        padding: @padding 0 @padding / 2 @padding / 2 ;
+    }
+    .s-image-streams{
+        .x-stream{
+            .x-thumbs{
+                min-width: (@thumbSize + 14px) * 3 + @padding * 2;
+                height:  @thumbSize + 14px;
+            }
+        }
+    }
+}
 
 
 // @STREAMS
@@ -771,6 +796,8 @@ textarea.ui-input-text {
        
         .x-thumbs{
             min-width: @thumbSize * 3 + @padding * 2;
+            height:  @thumbSize;
+            overflow: hidden;
         }
         .s-image-link{
             padding-left: @paddingGrid;
